<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="application_name">Aether\'s Notebook</string>
    <string name="application_sdk_version">3</string>
    <string name="application_version">1.0</string>
	<string name="permission_global">horizon.geotagger.PERMISSION_GLOBAL</string>

	<string name="application_sensorservice_configurator_name">Configure Aether\'s Notebook</string> 
	<string name="application_geotag_name">Aether\'s Notebook</string>
	
	<string name="menu_item_preferences">Preferences</string>
	
	<!-- Preferences activity -->
	<string name="Preferences_loggingOn">loggingOn</string>
	<string name="Preferences_logsDir">logsDir</string>
	<string name="Preferences_maxFileSize">maxFileSize</string>
	<string name="Preferences_maxTotalCapacity">maxTotalCapacity</string>
	<string name="Preferences_storageCleanupStrategy">storageCleanupStrategy</string>
	<string name="Preferences_sensors">sensors</string>
	<string name="Preferences_startOnBootFlag">startOnBootFlag</string>
	<string name="Preferences_cmdUpload">cmdUpload</string>
	<string name="Preferences_uploadWhen">uploadWhen</string>
	<string name="Preferences_uploadUsing">uploadUsing</string>
</resources>
